# online-courses

antigravity-nicegui/: components.py  demos.py  main.py  projects.py  requirements.txt  theme.py
udemy-deploy-ml-models-with-streamlit/: pyproject.toml
udemy-deploy-ml-models-with-streamlit/.streamlit/: secrects.toml  secrets.toml
udemy-deploy-ml-models-with-streamlit/app/: main.py
udemy-deploy-ml-models-with-streamlit/app/01_fundamentals/: 02_data_elements.py  05_forms.py  06_layout.py  07_final_project.py
udemy-deploy-ml-models-with-streamlit/app/02_caching/: 01_basics.py  02_refactor_fundamentals_project.py  03_advanced.py  04_final_project.py
udemy-deploy-ml-models-with-streamlit/app/03_session/: 02_advanced.py  04_final_project.py
udemy-deploy-ml-models-with-streamlit/app/04_multi_page/: main.py
udemy-deploy-ml-models-with-streamlit/app/04_multi_page/basics/pages/: 2_page2.py
udemy-deploy-ml-models-with-streamlit/app/04_multi_page/pages/: 1_experiments.py
udemy-deploy-ml-models-with-streamlit/app/05_auth/: 01_basics.py  02_advanced.py  03_final_project.py  config.yaml
udemy-deploy-ml-models-with-streamlit/app/06_db/: 01_supabase.py  03_final_project.py
udemy-deploy-ml-models-with-streamlit/app/db/: 02_api.py
udemy-deploy-ml-models-with-streamlit/app/fundamentals/: 01_text_elements.py  03_chart_elements.py  04_input_widgets.py  07_final_project.py
udemy-deploy-ml-models-with-streamlit/app/multi_page/: main.py
udemy-deploy-ml-models-with-streamlit/app/multi_page/pages/: 1_page1.py
udemy-deploy-ml-models-with-streamlit/app/session/: 01_basics.py  03_miniproject.py
udemy-deploy-ml-models-with-streamlit/data/: car_data.csv  sample_data.csv  sample_map.csv
udemy-deploy-ml-models-with-streamlit/models/: mushroom_model.joblib
udemy-fastapi/: .gitignore  README.md  alembic.ini  pyproject.toml
udemy-fastapi/app/: main.py
udemy-fastapi/app/01_requests/: app.py
udemy-fastapi/app/02_advanced_requests/: app.py  book.py
udemy-fastapi/app/03_restful_api/: app.py  auth.py  crud.py  db.py  models.py  schemas.py  security.py  seed.py  todos.py  users.py
udemy-fastapi/app/03_restful_api/templates/: home.html
udemy-fastapi/data/: testdb.db  todos.db
udemy-fastapi/test/: test_app.py  test_example.py  test_todos.py
youtube-ai-agents/: .gitignore  main.py  pyproject.toml  results  results.txt
youtube-ai-agents/genai_agent/: genai_agent.py
youtube-ai-agents/langgraph_agent/: langgraph_agent.py
youtube-ai-agents/local_agent/: local_agent.py  local_agent_via_api.py  local_agent_with_chaining.py  local_agent_with_tavily.py  local_agent_with_tools.py  local_agent_with_validation.py  setup_mac.sh  vector.py
youtube-ai-agents/rag_agent/: custom_types.py  data_loader.py  prod_rag_agent.py  streamlit_app.py  vector_db.py
youtube-ai-news/: main.py  pyproject.toml
youtube-ai-news/app/: daily_runner.py  runner.py
youtube-ai-voice-agent/: main.py  pyproject.toml
