[project]
name = "youtube-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "ddgs>=9.10.0",
    "google-genai>=1.62.0",
    "imap-tools>=1.11.1",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "openai>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pyowm>=3.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.19.0",
    "wikipedia>=1.4.0",
]
