[project]
name = "youtube-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5.0.0",
    "asyncio>=4.0.0",
    "ddgs>=9.10.0",
    "fastapi>=0.128.7",
    "google-genai>=1.62.0",
    "imap-tools>=1.11.1",
    "inngest>=0.5.15",
    "ipykernel>=7.2.0",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "llama-index>=0.10.45.post1",
    "llama-index-core>=0.10.45",
    "llama-index-experimental>=0.2.0",
    "llama-index-llms-ollama>=0.2.2",
    "llama-index-readers-file>=0.1.33",
    "openai>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pyowm>=3.5.0",
    "pypdf>=4.3.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "streamlit>=1.19.0",
    "tavily-python>=0.7.21",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
